[package]
authors = ["Erik Johnston <erikj@matrix.org>"]
name = "matrix-ircd"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.1"
futures = "0.1.25"
futures3 = {version="0.3.5", package="futures", features=["compat"]}
httparse = "1.3.4"
lazy_static = "1.4.0"
native-tls = "0.2.4"
netbuf = "0.4.1"
# TODO: upgrate to 2.1.3
pest = "0.4.0"
quick-error = "1.2.3"
rand = "0.7.3"
regex = "1.3.9"
serde = {version="1.0.111", features=["derive"]}
serde_json = "1.0.53"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.4.0"
tokio-core = "0.1.0"
tokio-dns-unofficial = "0.1.0"
tokio-io = "0.1.3"
tokio-proto = "0.1.0"
tokio-tls = "0.2.0"
url = "1.7.2"
# currently added for sanity testing http.rs
reqwest = {version = "0.10.6", features=["blocking"]}

[dependencies.openssl]
version = "0.10.0"

[dependencies.tasked-futures]
git = "https://github.com/erikjohnston/tasked-futures.git"
optional = false

[dependencies.tokio-timer]
git = "https://github.com/tokio-rs/tokio-timer"

[features]
clippy = []
default = []
trace_logging = [
    "slog/max_level_trace",
    "slog/release_max_level_warn",
]

[dev-dependencies]
# HTTP mocking
mockito = "0.25.2"
