[package]
authors = ["Erik Johnston <erikj@matrix.org>"]
name = "matrix-ircd"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.1"
futures = "0.3.5"
lazy_static = "1.4.0"
netbuf = "0.4.1"
# TODO: upgrate to 2.1.3
pest = "0.4.0"
quick-error = "1.2.3"
rand = "0.7.3"
regex = "1.3.9"
serde = {version="1.0.111", features=["derive"]}
serde_json = "1.0.53"
slog = {version = "2.5.2", features = ["max_level_trace"]}
slog-async = "2.5.0"
slog-term = "2.4.0"
url = "1.7.2"
tokio = { version = "0.2.22", features=["full"] }
hyper = "0.13.6"
native-tls = "0.2.4"
tokio-native-tls = "0.1.0"
hyper-tls = "0.4.3"

[dependencies.openssl]
version = "0.10.0"

[features]
clippy = []
default = []
trace_logging = [
    "slog/max_level_trace",
    "slog/release_max_level_warn",
]

[dev-dependencies]
# HTTP mocking
mockito = "0.25.2"
